# gnome-monitor-config

./: Makefile  README.md  meson.build
src/: gmc-display-config-manager.c  gmc-display-config-manager.h  gmc-display-config.c  gmc-display-config.h  gmc-display-test.c  meson.build
